html閉じタグを追加

--- a/src/assets/include/_footer.ejs
+++ b/src/assets/include/_footer.ejs
@@ -6,3 +6,4 @@
 <script src="<%= relativePath %>/assets/js/common.bundle.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/<%= data[pageid].script %>.bundle.js?date=<%= data.time %>"></script>
 </body>
+</html>
