scss projectレイヤーを追加 IE11用ハックmixinを追加

--- a/src/assets/scss/foundation/_reset.scss
+++ b/src/assets/scss/foundation/_reset.scss
@@ -13,6 +13,10 @@ address, caption,figure {
 	padding: 0;
 }
 
+main{
+	display: block;
+}
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
