--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -13,7 +13,14 @@
 /* ============================================================
   Foundation
 ============================================================= */
-@import "./foundation/*";
+@import "./foundation/reset";
+@import "./foundation/base";
+
+/* ============================================================
+  plugin
+============================================================= */
+
+@import "./plugin/**/*";
 
 /* ============================================================
   Layout
@@ -30,11 +37,17 @@
 @import "./object/component/*";
 
 /* ---------------------------------------
-  Page
+  Project
 --------------------------------------- */
-@import "./object/page/*";
+@import "./object/project/*";
 
 /* ---------------------------------------
   Utility
 --------------------------------------- */
 @import "./object/utility/*";
+
+/* ============================================================
+  Page
+============================================================= */
+
+@import "./page/*";
