pageレイヤーにpgプレフィックスをつける

--- a/src/assets/scss/page/_top.scss
+++ b/src/assets/scss/page/_top.scss
@@ -2,11 +2,11 @@
 ////////////////////////
 // TOP
 ////////////////////////
+.pg-top{
+  
+}
+.pg-top-section{
 
-.test999{
-  a{
-    color:#121212;
-  }
   display: grid;
   display: flex;
   transform: scale(1);
