fontタスク movieタスク pluginタスク を追加

--- a/src/assets/scss/mixin/_font.scss
+++ b/src/assets/scss/mixin/_font.scss
@@ -2,3 +2,15 @@
 //////////////////////////////////////////
 // font
 //////////////////////////////////////////
+
+@mixin noto1{
+  // bold
+  font-family: $commonFont;
+  font-weight: 700;
+}
+
+@mixin noto2{
+  // bold
+  font-family: $commonFont;
+  font-weight: 900;
+}
