--- a/src/assets/scss/variable/_var.scss
+++ b/src/assets/scss/variable/_var.scss
@@ -9,3 +9,5 @@ $breakpoint:992px;
 
 // ブレイクポイント2
 $breakpoint2:768px;
+
+$commonFont: "Noto Sans Japanese", "YuGothic", "Yu Gothic","Meiryo", Hiragino Sans,Hiragino Kaku Gothic ProN, sans-serif;
