--- a/src/assets/include/_footer.ejs
+++ b/src/assets/include/_footer.ejs
@@ -1,6 +1,7 @@
 <footer class="l-footer">
   <p>footer</p>
 </footer>
+<script src="<%= relativePath %>/assets/js/plugins/sample.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/vendor.bundle.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/modules.bundle.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/common.bundle.js?date=<%= data.time %>"></script>
