--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -3,6 +3,61 @@
 // base
 ////////////////////////
 
+@font-face {
+  // thin
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 100;
+  src: url('../fonts/notoSansJp/NotoSansJP-Thin.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Thin.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+@font-face {
+  // light
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/notoSansJp/NotoSansJP-Light.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Light.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+@font-face {
+  // regular
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/notoSansJp/NotoSansJP-Regular.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Regular.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+@font-face {
+  // medium
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/notoSansJp/NotoSansJP-Medium.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Medium.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+@font-face {
+  // bold
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/notoSansJp/NotoSansJP-Bold.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Bold.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+@font-face {
+  // black
+  font-family: 'Noto Sans Japanese';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/notoSansJp/NotoSansJP-Black.woff2') format('woff2'),
+        url('../fonts/notoSansJp/NotoSansJP-Black.woff') format('woff'),
+        url('../fonts/notoSansJp/NotoSansJP-Normal.otf') format('opentype');
+}
+
 html {
   height: 100%;
   font-size: 62.5%;
@@ -11,7 +66,9 @@ html {
 body {
   text-size-adjust: 100%;
   height: 100%;
-  font-family: "YuGothic","Yu Gothic","Meiryo",Hiragino Sans,Hiragino Kaku Gothic ProN,sans-serif;
+  font-family: $commonFont;
+  font-style: normal;
+  font-weight: 400;
   color: #000;
   line-height: 1.7;
   font-size:1.4rem;
