--- a/src/assets/scss/variable/_var.scss
+++ b/src/assets/scss/variable/_var.scss
@@ -10,4 +10,5 @@ $breakpoint:992px;
 // ブレイクポイント2
 $breakpoint2:768px;
 
+// font
 $commonFont: "Noto Sans Japanese", "YuGothic", "Yu Gothic","Meiryo", Hiragino Sans,Hiragino Kaku Gothic ProN, sans-serif;
