共通フォントの設定を修正

--- a/src/assets/scss/variable/_var.scss
+++ b/src/assets/scss/variable/_var.scss
@@ -11,4 +11,4 @@ $breakpoint:992px;
 $breakpoint2:768px;
 
 // font
-$commonFont: "Noto Sans Japanese", "YuGothic", "Yu Gothic","Meiryo", Hiragino Sans,Hiragino Kaku Gothic ProN, sans-serif;
+$commonFont: "Noto Sans Japanese", -apple-system, BlinkMacSystemFont,"Segoe UI","Hiragino Sans","Hiragino Kaku Gothic ProN", Meiryo,sans-serif;
