--- a/src/assets/scss/foundation/_reset.scss
+++ b/src/assets/scss/foundation/_reset.scss
@@ -3,14 +3,14 @@
 // reset
 ////////////////////////
 
-body, div,
-dl, dt, dd, ul, ol, li,
-h1, h2, h3, h4, h5, h6,
-pre, form, fieldset, input, textarea,
-p, blockquote, th, td,
-address, caption,figure {
-	margin: 0;
-	padding: 0;
+/* Set core body defaults */
+/* bodyのデフォルトを定義 */
+
+body{
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
 }
 
 main{
@@ -22,51 +22,87 @@ table {
 	border-spacing: 0;
 }
 
+input[type="button"],input[type="text"],input[type="submit"] {
+   -webkit-appearance: none;
+   border-radius: 0;
+}
+
 fieldset, img {
 	border: 0;
 	vertical-align: top;
 }
 
-address, caption, cite, code, dfn, em, strong, th, var {
-	font-style: normal;
-	font-weight: normal;
+/* Box sizing rules */
+/* Box sizingの定義 */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-ul, ol {
-	list-style: none;
+/* Remove default padding */
+/* デフォルトのpaddingを削除 */
+ul[class],
+ol[class] {
+  padding: 0;
 }
 
-caption, th {
-	text-align: left;
+/* Remove default margin */
+/* デフォルトのmarginを削除 */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-size: 100%;
-	font-weight: normal;
+
+/* Remove list styles on ul, ol elements with a class attribute */
+/* class属性を持つul、ol要素のリストスタイルを削除 */
+ul[class],
+ol[class] {
+  list-style: none;
 }
 
-q:before, q:after {
-	content: '';
+/* A elements that don't have a class get default styles */
+/* classを持たない要素はデフォルトのスタイルを取得 */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
 }
 
-abbr, acronym {
-	border: 0;
+/* Make images easier to work with */
+/* img要素の扱いを簡単にする */
+img {
+  max-width: 100%;
+  display: block;
 }
 
-hr {
-	display: none;
-	margin: 0;
-	padding: 0;
+/* Inherit fonts for inputs and buttons */
+/* inputやbuttonなどのフォントは継承を定義 */
+input,
+button,
+textarea,
+select {
+  font: inherit;
 }
-input{
-  border:none;
-}
-input[type="button"],input[type="text"],input[type="submit"] {
-   -webkit-appearance: none;
-   border-radius: 0;
-}
-a{
-	outline: none;
-  text-decoration:none;
-  color: #000;
+
+/* Remove all animations and transitions for people that prefer not to see them */
+/* 見たくない人用に、すべてのアニメーションとトランジションを削除 */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
