--- a/src/assets/scss/foundation/_reset.scss
+++ b/src/assets/scss/foundation/_reset.scss
@@ -3,106 +3,178 @@
 // reset
 ////////////////////////
 
-/* Set core body defaults */
-/* bodyのデフォルトを定義 */
 
-body{
-  min-height: 100vh;
-  scroll-behavior: smooth;
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
-}
-
-main{
-	display: block;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-input[type="button"],input[type="text"],input[type="submit"] {
-   -webkit-appearance: none;
-   border-radius: 0;
-}
-
-fieldset, img {
-	border: 0;
-	vertical-align: top;
-}
-
-/* Box sizing rules */
-/* Box sizingの定義 */
-*,
-*::before,
-*::after {
+* {
   box-sizing: border-box;
 }
 
-/* Remove default padding */
-/* デフォルトのpaddingを削除 */
-ul[class],
-ol[class] {
-  padding: 0;
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-/* Remove default margin */
-/* デフォルトのmarginを削除 */
+html,
 body,
+div,
+span,
+object,
+iframe,
 h1,
 h2,
 h3,
 h4,
+h5,
+h6,
 p,
-ul[class],
-ol[class],
-li,
-figure,
-figcaption,
 blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
 dl,
-dd {
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
 }
 
-
-/* Remove list styles on ul, ol elements with a class attribute */
-/* class属性を持つul、ol要素のリストスタイルを削除 */
-ul[class],
-ol[class] {
-  list-style: none;
+body {
+  line-height: 1;
 }
 
-/* A elements that don't have a class get default styles */
-/* classを持たない要素はデフォルトのスタイルを取得 */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
-/* Make images easier to work with */
-/* img要素の扱いを簡単にする */
-img {
-  max-width: 100%;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
-/* Inherit fonts for inputs and buttons */
-/* inputやbuttonなどのフォントは継承を定義 */
-input,
-button,
-textarea,
-select {
-  font: inherit;
+nav ul {
+  list-style: none;
 }
 
-/* Remove all animations and transitions for people that prefer not to see them */
-/* 見たくない人用に、すべてのアニメーションとトランジションを削除 */
-// @media (prefers-reduced-motion: reduce) {
-//   * {
-//     animation-duration: 0.01ms !important;
-//     animation-iteration-count: 1 !important;
-//     transition-duration: 0.01ms !important;
-//     scroll-behavior: auto !important;
-//   }
-// }
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent;
+}
+
+/* change colours to suit your needs */
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
+}
+
+/* change colours to suit your needs */
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* change border colour to suit your needs */
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #cccccc;
+  margin: 1em 0;
+  padding: 0;
+}
+
+input,
+select {
+  vertical-align: middle;
+}
