--- a/src/assets/include/_footer.ejs
+++ b/src/assets/include/_footer.ejs
@@ -3,7 +3,7 @@
 </footer>
 <script src="<%= relativePath %>/assets/js/plugins/sample.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/vendor.bundle.js?date=<%= data.time %>"></script>
-<script src="<%= relativePath %>/assets/js/modules.bundle.js?date=<%= data.time %>"></script>
+<script src="<%= relativePath %>/assets/js/utils.bundle.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/common.bundle.js?date=<%= data.time %>"></script>
 <script src="<%= relativePath %>/assets/js/<%= data[pageid].script %>.bundle.js?date=<%= data.time %>"></script>
 </body>
