--- a/src/assets/scss/mixin/_center.scss
+++ b/src/assets/scss/mixin/_center.scss
@@ -3,10 +3,14 @@
 // center
 //////////////////////////////////////////
 
-@mixin center {
-  display:block;
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align:center;
+@mixin center($position: absolute, $zIndex: null) {
+  position: $position;
+  left:0;
+  right:0;
+  top:0;
+  bottom:0;
+  margin: auto;
+  @if($zIndex != null){
+    z-index: $zIndex;
+  }
 }
