--- a/src/assets/scss/variable/_var.scss
+++ b/src/assets/scss/variable/_var.scss
@@ -11,4 +11,4 @@ $bp2: 768;
 $bp2_: $bp2 + 1;
 
 // font
-$commonFont: "Noto Sans Japanese", -apple-system, BlinkMacSystemFont,"Segoe UI","Hiragino Sans","Hiragino Kaku Gothic ProN", Meiryo,sans-serif;
+$commonFont: YakuHanJP, "Noto Sans Japanese", -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
