--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -3,10 +3,15 @@
 // base
 ////////////////////////
 
+/////////
+// Noto Sans Japanese
+/////////
+
 @font-face {
   // thin
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 100;
   src: url('../fonts/notoSansJp/NotoSansJP-Thin.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Thin.woff') format('woff');
@@ -15,6 +20,7 @@
   // light
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 300;
   src: url('../fonts/notoSansJp/NotoSansJP-Light.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Light.woff') format('woff');
@@ -23,6 +29,7 @@
   // regular
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 400;
   src: url('../fonts/notoSansJp/NotoSansJP-Regular.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Regular.woff') format('woff');
@@ -31,6 +38,7 @@
   // medium
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 500;
   src: url('../fonts/notoSansJp/NotoSansJP-Medium.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Medium.woff') format('woff');
@@ -39,6 +47,7 @@
   // bold
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 700;
   src: url('../fonts/notoSansJp/NotoSansJP-Bold.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Bold.woff') format('woff');
@@ -47,10 +56,86 @@
   // black
   font-family: 'Noto Sans Japanese';
   font-style: normal;
+  font-display: swap;
   font-weight: 900;
   src: url('../fonts/notoSansJp/NotoSansJP-Black.woff2') format('woff2'),
         url('../fonts/notoSansJp/NotoSansJP-Black.woff') format('woff');
 }
+
+
+/////////
+// Yaku Han JP
+/////////
+
+@font-face {
+  // thin
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 100;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Thin.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Thin.woff') format('woff');
+}
+@font-face {
+  // light
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 300;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Light.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Light.woff') format('woff');
+}
+
+@font-face {
+  // DemiLight
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 350;
+  src: url('../fonts/YakuHanJP/YakuHanJP-DemiLight.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-DemiLight.woff') format('woff');
+}
+@font-face {
+  // regular
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Regular.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Regular.woff') format('woff');
+}
+@font-face {
+  // medium
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 500;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Medium.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Medium.woff') format('woff');
+}
+@font-face {
+  // bold
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Bold.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Bold.woff') format('woff');
+}
+@font-face {
+  // black
+  font-family: 'YakuHanJP';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 900;
+  src: url('../fonts/YakuHanJP/YakuHanJP-Black.woff2') format('woff2'),
+        url('../fonts/YakuHanJP/YakuHanJP-Black.woff') format('woff');
+}
+
+
+/////////
+// other
+/////////
 
 html {
   height: 100%;
@@ -62,7 +147,7 @@ body {
   height: 100%;
   font-family: $commonFont;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 400;
   color: #000;
   line-height: 1.7;
   font-size:1.4rem;
