header footer を設定

--- a/src/assets/scss/object/project/_kv.scss
+++ b/src/assets/scss/object/project/_kv.scss
@@ -1,11 +1,8 @@
 @charset "UTF-8";
 ////////////////////////
-// wrapper
+// kv
 ////////////////////////
 
-.l-wrapper{
-}
-
-@include max-screen($bp1) {
+.p-kv{
 
 }
