--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -151,6 +151,9 @@ body {
   color: #000;
   line-height: 1.7;
   font-size:1.4rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   @include max-screen($bp1){
     background: pink;
   }
