--- a/src/assets/scss/object/project/_box.scss
+++ b/src/assets/scss/object/project/_box.scss
@@ -31,6 +31,10 @@
 
 .p-box{
   height: 800px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 50px;
   border-top: 1px solid #f00;
   transition: all 0.3s;
   &.is-show{
