--- a/src/assets/scss/object/utility/_style.scss
+++ b/src/assets/scss/object/utility/_style.scss
@@ -6,3 +6,18 @@
 .mb0{
   margin-bottom: 0px;
 }
+
+.is-objectFit-cover{
+  width:100%;
+  height: 100%;
+	object-fit: cover;
+	object-position: bottom;
+	font-family: 'object-fit: cover; object-position: bottom;';
+}
+
+.is-objectFit-contain{
+  width:100%;
+  height: 100%;
+	object-fit: contain;
+	font-family: 'object-fit: contain;';
+}
