--- a/src/assets/include/_footer.ejs
+++ b/src/assets/include/_footer.ejs
@@ -1,9 +1,9 @@
 <footer class="l-footer">
   <p>footer</p>
 </footer>
-<script src="<%= relativePath %>/assets/js/vendor.bundle.js?date=<%= data.time %>"></script>
-<script src="<%= relativePath %>/assets/js/utils.bundle.js?date=<%= data.time %>"></script>
-<script src="<%= relativePath %>/assets/js/common.bundle.js?date=<%= data.time %>"></script>
-<script src="<%= relativePath %>/assets/js/<%= data[pageid].script %>.bundle.js?date=<%= data.time %>"></script>
+<script src="<%= page.relativePath %>/assets/js/vendor.bundle.js?date=<%= time %>"></script>
+<script src="<%= page.relativePath %>/assets/js/utils.bundle.js?date=<%= time %>"></script>
+<script src="<%= page.relativePath %>/assets/js/common.bundle.js?date=<%= time %>"></script>
+<script src="<%= page.relativePath %>/assets/js/<%= page.class %>.bundle.js?date=<%= time %>"></script>
 </body>
 </html>
