IE対応の処理をハックからUA判定に変更

--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -154,7 +154,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  @include ie11{
+  @include IE{
     display: block;
   }
 }
