sassのimport から forward use に変更

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -3,6 +3,8 @@
 // footer
 ////////////////////////
 
+@use '../global' as g;
+
 .l-footer{
   height: 50px;
   background: #f00;
@@ -15,6 +17,6 @@
   }
 }
 
-@include max-screen($bp1) {
+@include g.max-screen(g.$bp1) {
 
 }
