--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,31 +1,14 @@
 @charset "UTF-8";
 
-// ===========================================================
-// variable
-// ===========================================================
-@import "./variable/*";
-
-// ===========================================================
-// mixin
-// ===========================================================
-@import "./mixin/*";
-
 /* ============================================================
   Foundation
 ============================================================= */
-@import "./foundation/reset";
-@import "./foundation/base";
-
-/* ============================================================
-  plugin
-============================================================= */
-
-@import "./plugin/**/*";
+@use "./foundation";
 
 /* ============================================================
   Layout
 ============================================================= */
-@import "./layout/*";
+@use "./layout";
 
 /* ============================================================
   Object
@@ -34,20 +17,20 @@
 /* ---------------------------------------
   Component
 --------------------------------------- */
-@import "./object/component/*";
+@use "./object/component";
 
 /* ---------------------------------------
   Project
 --------------------------------------- */
-@import "./object/project/*";
+@use "./object/project";
 
 /* ---------------------------------------
   Utility
 --------------------------------------- */
-@import "./object/utility/*";
+@use "./object/utility";
 
 /* ============================================================
   Page
 ============================================================= */
 
-@import "./page/*";
+@use "./page";
