--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -3,6 +3,8 @@
 // base
 ////////////////////////
 
+@use '../global' as g;
+
 /////////
 // Noto Sans Japanese
 /////////
@@ -145,7 +147,7 @@ html {
 body {
   text-size-adjust: 100%;
   height: 100%;
-  font-family: $commonFont;
+  font-family: g.$commonFont;
   font-style: normal;
   font-weight: 400;
   color: #000;
@@ -154,7 +156,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  @include IE{
+  @include g.IE{
     display: block;
   }
 }
