--- a/src/assets/scss/global/mixins/_font-family.scss
+++ b/src/assets/scss/global/mixins/_font-family.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 //////////////////////////////////////////
-// font
+// font-family
 //////////////////////////////////////////
 
 @mixin noto1{
