--- a/src/assets/scss/global/_variables.scss
+++ b/src/assets/scss/global/_variables.scss
@@ -5,10 +5,7 @@
 ////////////////////////////
 
 // ブレイクポイント
-$bp1: 992;
-$bp1_: $bp1 + 1;
-$bp2: 768;
-$bp2_: $bp2 + 1;
+$breakpoint: 900;
 
 // font
 $commonFont: YakuHanJP, "Noto Sans Japanese", -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
