--- a/src/assets/scss/object/utility/_index.scss
+++ b/src/assets/scss/object/utility/_index.scss
@@ -5,10 +5,6 @@
 
 @use '../../global' as g;
 
-.mb0{
-  margin-bottom: 0px;
-}
-
 .is-objectFit-cover{
   width:100%;
   height: 100%;
@@ -24,3 +20,10 @@
 	font-family: 'object-fit: contain;';
 }
 
+.u-pcBr{
+
+}
+
+.u-spBr{
+
+}
