package modules をアップデート それに伴い、動かない ライブラリを修正

--- a/src/assets/scss/global/mixins/_leading-trim.scss
+++ b/src/assets/scss/global/mixins/_leading-trim.scss
@@ -1,10 +1,11 @@
 @charset "UTF-8";
+@use 'sass:math';
 //////////////////////////////////////////
 // leading-trim
 //////////////////////////////////////////
 
 @mixin lt($size, $line){
-  $line-height: $line / $size;
+  $line-height: math.div($line, $size);
   &:before,
   &:after{
     content:"";
