--- a/src/assets/scss/global/mixins/_aspect-ratio.scss
+++ b/src/assets/scss/global/mixins/_aspect-ratio.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@use 'sass:math';
 //////////////////////////////////////////
 // aspect-ratio
 //////////////////////////////////////////
@@ -7,5 +8,5 @@
   display: block;
   width: 100%;
   height: 0;
-  padding-top: ($height / $width) * 100%;
+  padding-top: math.div($height, $width) * 100%;
 }
