--- a/src/assets/scss/global/mixins/_font-size.scss
+++ b/src/assets/scss/global/mixins/_font-size.scss
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@use 'sass:math';
 //////////////////////////////////////////
 // font-size
 //////////////////////////////////////////
@@ -6,7 +7,7 @@
 @mixin fs($font-size, $line-height:null, $letter-spacing:null){
   font-size: $font-size * 0.1rem;
   @if($line-height!=null){
-    line-height: ($line-height / $font-size);
+    line-height: math.div($line-height, $font-size);
   }
   @if($letter-spacing!=null){
     letter-spacing: $letter-spacing * 0.1rem;
