--- a/src/assets/scss/global/mixins/_clearfix.scss
+++ b/src/assets/scss/global/mixins/_clearfix.scss
@@ -3,7 +3,7 @@
 // clearfix
 //////////////////////////////////////////
 
-@mixin clearfix {
+@mixin cf {
   &:after {
     content: "";
     display: table;
