--- a/src/assets/scss/global/mixins/_hover.scss
+++ b/src/assets/scss/global/mixins/_hover.scss
@@ -3,11 +3,18 @@
 // hover
 //////////////////////////////////////////
 
-$opacity: 0.6;
-@mixin hover {
-  transition: opacity 0.2s linear;
-  &:hover{
-    opacity: $opacity;
+@mixin hover($ie: false) {
+  &:focus {
+    @content;
+  }
+  @media (hover: hover) and (pointer: fine) {
+    &:hover {
+      @content;
+    }
+  }
+  @if $ie {
+    @at-root .is-IE &:hover {
+      @content;
+    }
   }
 }
-
