--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -6,14 +6,72 @@
 @use '../global' as g;
 
 .l-footer{
-  height: 50px;
-  background: #f00;
-  text-align: center;
-  p{
-    position: relative;
-    top:50%;
-    transform: translateY(-50%);
-    font-size: 2rem;
+  @include g.relative;
+  background: #000;
+  padding: 50px 0 0;
+  flex:none;
+}
+
+.l-footer__inner{
+  @include g.flex($ai:center,$jc:space-between);
+  padding: 0 0 30px;
+}
+
+.l-footer__main{
+  margin: 0 0 0 50px;
+  width:70%;
+}
+
+.l-footer__sub{
+  margin: 0 50px 0 0;
+  flex:1;
+}
+
+.l-footer__logo{
+  margin: 0 0 30px 50px;
+  width: 150px;
+  a{
+    @include g.fs(0,0);
+    display:block;
   }
+  svg{
+    width: 80px;
+    height :auto;
+  }
+}
+
+
+.l-footer__links{
+  @include g.flex($ai:center);
+  li:not(:last-of-type){
+    margin-right: 20px;
+  }
+  a{
+    @include g.fs(14,14);
+    display:block;
+    color:#fff;
+    text-decoration: none;
+  }
+}
+
+.l-footer__sns{
+  @include g.flex($ai:center);
+  li:not(:last-of-type){
+    margin-right: 20px;
+  }
+  a{
+    @include g.fs(14,14);
+    display:block;
+    color:#fff;
+    text-decoration: none;
+  }
+}
+
+.l-footer__copyright{
+  @include g.fs(10,10);
+  padding: 20px 0 30px;
+  margin: 0 30px 0;
+  color: #fff;
+  text-align:center;
 }
 
