--- a/src/assets/scss/page/_top.scss
+++ b/src/assets/scss/page/_top.scss
@@ -9,7 +9,19 @@
 
 }
 
-.pg-top-section{
+.pg-top-kv{
+  @include g.relative;
+  height: 300px;
+  margin-bottom: 100px;
+  video{
+    @include g.absolute($t:0,$l:0);
+    width:100%;
+    height: 100%;
+    object-fit:cover;
+  }
+}
 
+.pg-top-section{
+  margin: 0 80px 100px;
 }
 
