--- a/src/assets/scss/page/_top.scss
+++ b/src/assets/scss/page/_top.scss
@@ -22,6 +22,11 @@
 }
 
 .pg-top-section{
-  margin: 0 80px 100px;
+  @include g.pc{
+    margin: 0 80px 100px;
+  }
+  @include g.sp{
+    margin: 0 20px 50px;
+  }
 }
 
