--- a/frontend/src/-assets/scss/foundation/_base.scss
+++ b/frontend/src/-assets/scss/foundation/_base.scss
@@ -167,3 +167,12 @@ body {
 a{
   color:#000;
 }
+
+img{
+  width: 100%;
+  vertical-align: bottom;
+}
+
+a[href^="tel:"]{
+  pointer-events: none;
+}
