--- a/frontend/src/-assets/scss/foundation/_base.scss
+++ b/frontend/src/-assets/scss/foundation/_base.scss
@@ -149,6 +149,7 @@ html {
 }
 
 body {
+  @include g.fs(14, 30);
   text-size-adjust: 100%;
   height: 100%;
   font-family: g.$commonFont;
@@ -158,6 +159,9 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  font-feature-settings: 'palt';
+  font-smoothing: antialiased;
+  -webkit-font-smoothing: antialiased;
   @include g.fs(14, 30);
   @include g.IE{
     display: block;
