nodeのバージョンをup IE用の記述、ポリフィルを削除 ローカルフォントを削除

--- a/frontend/src/-assets/scss/global/_variables.scss
+++ b/frontend/src/-assets/scss/global/_variables.scss
@@ -8,4 +8,4 @@
 $breakpoint: 900;
 
 // font
-$commonFont: YakuHanJP, "Noto Sans Japanese", -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
+$commonFont: -apple-system, BlinkMacSystemFont, "Segoe UI", "Hiragino Sans", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif;
